# dna2oiia

./: .gitignore  README.md  convert_mp4_to_gif.py  convert_video_to_gif.py  example.fasta  pyproject.toml  st_dna2oiia.py
.devcontainer/: devcontainer.json
src/dna2oiia/: __init__.py  cli.py  converter.py
tests/: test_converter.py
