[tool.poetry]
name = "dna2oiia"
version = "0.1.0"
description = "A Python package that converts DNA sequences into 'oiia' sounds."
authors = [
    "Chen Hsieh"
]
readme = "README.md"
packages = [{ include = "dna2oiia", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
pydub = "*"
numpy = "*"

[tool.poetry.scripts]
dna2oiia = "dna2oiia.cli:main"

[tool.setuptools.package-data]
"dna2oiia" = ["data/*.wav"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
